--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
